--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - run: pip install black codespell flake8 isort mypy pytest pyupgrade safety
       - run: black --check . || true
-      - run: codespell --quiet-level=2 --skip="*.txt" || true
+      - run: codespell --quiet-level=2 --skip="*.txt"
       - run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
       - run: isort --check-only --profile black . || true
       - run: pip install -r requirements.txt || true  # There are in setup.py
